# mantis

./: .gitignore  Cargo.toml  MANTIS.md  README.md  main
doc/: async_example
example/: hello.ms  main-latest.ms  main.ms  struct_test.ms
examples/: build.ms  generic.ms  hello.ms  if.ms  lamda.ms  loop.ms  macro.ms  main-latest.ms  main.ms  match.ms  memory.ms  pointer.ms  struct_field_assign.ms  struct_nested.ms  test_auto_generic.ms  test_ptr.ms  vec.ms
mantis/src/: ast.ms  elif.ms  generic.ms  loop.ms  main.ms  memory.ms  pointer.ms  struct.ms  vec.ms
mantis_parser/: Cargo.toml
mantis_parser/src/: ast.rs  lib.rs  parser.rs  token.rs
src/: main.rs  ms.rs  resolver.rs
src/backend/: compile.rs  compile_function.rs  cranelift.rs  mod.rs  scope_env.rs  simple.rs
src/frontend/: function.rs  tokenizer.rs  tokens.rs  variable.rs
src/native/: instructions.rs
src/registries/: compiler_functions.rs  functions.rs  mod.rs  modules.rs  structs.rs  traits.rs  types.rs  variable.rs
tests/: test_runner.py
