[package]
name = "mantis"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
cranelift = "0.130.1"
cranelift-jit = "0.130.1"
cranelift-module = "0.130.1"
cranelift-native = "0.130.1"
cranelift-object = "0.130.1"
env_logger = "0.11.10"
log = "0.4.29"
logos = "0.14.4"
rand = "0.10.0"
mantis_parser = { path = "./mantis_parser" }
linear-map = "1.2.0"


[workspace]
members =[
  "mantis_parser"
]
